[metadata]
name = cmp_cloud_log
description-file =
    README.md
classifier =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[files]
packages =
    cloud_log


data_files =
    /static = static/*

[pbr]
warnerrors = true

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = cloud_log/locale
domain = django
